--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/joy": "^5.0.0-beta.48",
     "@react-oauth/google": "^0.12.1",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "firebase": "^10.13.2",
@@ -24,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.26.2",
     "swiper": "^11.1.12"
   },
